# microservice-social-sweat

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: compile_requirements.sh  format.sh  upgrade_compile_requirements.sh
src/microservice_social_sweat/: __init__.py  api.py  config.py  lifespan.py  limiting.py  main.py  version.py
src/microservice_social_sweat/logging/: local.py
src/microservice_social_sweat/middlewares/: clerk_middleware.py
src/microservice_social_sweat/services/: utils.py
src/microservice_social_sweat/services/activities/: activities_data.json  controller.py  models.py  router.py
src/microservice_social_sweat/services/generic_service/: controller.py  router.py
src/microservice_social_sweat/services/users/: controller.py  models.py  router.py
tests/: .env.test  conftest.py  helpers.py  test_mocks.py
tests/unit/: test_base.py
